# angular19

./: .cursorignore  .cursorrules  .gitignore  AGENTS.md  AGENT_FLEET_RUST_PLAN.md  AUTH_PRIVACY_CHANGES_2026_05_16.md  LICENSE  LK_MOBILE_FIRST_2026.md  MIGRATION_ANALYSIS.md  MIGRATION_TO_NODEJS.md  POS_CASH_DRAWER_FIX_2026_05_13.md  POS_FISCAL_HARDWARE_CHECK_2026_05_27.md  POS_FISCAL_PROGRESS_2026_05_20.md  POS_TERMINAL_PROCESSING_NOTES_2026_05_12.md  QUICK_START.md  QUICK_TESTING.md  REDESIGN_PROGRESS_2026_05_14.md  RUST_POS_AGENT_CONTEXT.md  SMOKE_TEST_CHECKLIST.md  SSR_GUIDE.md  STUDENT_ACCOUNT_ARCHITECTURE.md  TELEPHONY_SPLIT_SMOKE.md  TESTING_GUIDE.md  TG_BROADCAST_ARCHITECTURE_2026_05_31.md  VOENNAYA_RETUSH_FLOW_RESEARCH_2026_05_08.md  angular-signals.plan.md  angular.json  deploy.sh  ecosystem.config.cjs  llms-full.txt  ngsw-config.json  package-lock.json  package.json  playwright.config.ts  proxy.conf.json  tsconfig.app.json  tsconfig.json  tsconfig.spec.json  update-from-laptop.md  update.md  (+1 more)
.cursor/: backlog.md
backend/: .gitignore  .kanelrc.cjs  FIREBASE_TO_POSTGRESQL_COMPARISON.md  IMPLEMENTATION_SUMMARY.md  INSTAGRAM_DM_SETUP.md  MIGRATION_GUIDE.md  README.md  package.json  tsconfig.json  vitest.config.ts
deploy-configs/: README.md  prometheus-core-alerts.yml  prometheus-fingerprint-alerts.yml  prometheus-fingerprint-scrape.yml.patch  prometheus-telephony-alerts.yml
e2e/: attribution-chain.spec.ts  contacts-layout.spec.ts
flyer/: Untitled  (+26 more)
flyer-new/: cert-studvesna-a4.html  cert-studvesna-personal.html  envelope-photo-v7-1.html  envelope-photo-v7-2.html  envelope-photo-v7-3.html  envelope-photo-v7-4.html  envelope-photo-v7-6.html  flyer-all-v8-light-a4.html  flyer-businesscard-promos-v1-white-a4.html  flyer-businesscard-v10-a4.html  flyer-businesscard-v10.html  flyer-canvas-v10-a4.html  flyer-canvas-v10.html  flyer-documents-v10-a4.html  flyer-documents-v10.html  flyer-documents-v8-light-a4.html  flyer-documents-v8-light.html  flyer-mug-v10-a4.html  flyer-mug-v10.html  flyer-photo-print-promos-v1-white-a4.html  flyer-portrait-v10-a4.html  flyer-portrait-v10.html  flyer-print-v10-a4.html  flyer-print-v10.html  flyer-print-v8-light-a4.html  flyer-print-v8-light.html  flyer-restoration-v10-a4.html  flyer-restoration-v10.html  flyer-scan-v8-light-a4.html  (+9 more)
guard-agent/: Cargo.toml
guard-agent/src/: agent.rs  cdr.rs  commands.rs  defender.rs  main.rs  scanner.rs
mail-api/: Cargo.toml
mail-api/src/: attachment_store.rs  config.rs  db.rs  dkim.rs  http_api.rs  main.rs  mime_parser.rs  smtp_sender.rs  smtp_server.rs
monitor-agent/: Cargo.toml  config.example.toml
monitor-agent/proto/: infra.proto
monitor-agent/src/: agent.rs  commands.rs  disk_metrics.rs  exec.rs  files.rs  logs.rs  main.rs  network.rs  service.rs  sysinfo_cmd.rs  windows_info.rs
photo-retouch-tool/: Cargo.toml
photo-retouch-tool/src/: lib.rs  main.rs
pos-agent/: Cargo.toml  config.example.toml
pos-agent/proto/: infra.proto
pos-agent/src/: agent.rs  atol.rs  atol_ffi.rs  commands.rs  inpas.rs  main.rs  telemetry.rs
print-agent/: Cargo.toml  build.rs  config.example.toml  svf-print-agent.service
print-agent/proto/: infra.proto
print-agent/src/: agent.rs  canon_api.rs  commands.rs  cups_print.rs  discovery.rs  icc.rs  main.rs  pipeline.rs  printing.rs  printticket.rs  scan.rs  snmp.rs  telemetry.rs  win_print.rs
print-agent/wix/: main.wxs
print-api/: Cargo.toml  build.rs
print-api/proto/: print.proto
print-api/scripts/: gen-document-set-footer.sh
print-api/src/: config.rs  db.rs  error.rs  main.rs  s3_client.rs  scheduler.rs  source_file.rs
print-api/src/conversion/: detect.rs  docx_font.rs  ghostscript.rs  libreoffice.rs  mod.rs
print-api/src/cups/: executor.rs  jpeg.rs  layout_sheet.rs  mod.rs  options.rs  pdf.rs  pipeline.rs  ppd.rs  status.rs  submit.rs
print-api/src/handlers/: analytics.rs  billing.rs  bridges.rs  business_card.rs  consumables.rs  conversion.rs  count.rs  coverage.rs  coverage_job.rs  design_templates.rs  document_templates.rs  health.rs  icc_profiles.rs  infra_agents.rs  infra_alerts.rs  infra_fleet.rs  infra_updates.rs  job_templates.rs  jobs.rs  layout_batch.rs  mod.rs  monitor.rs  preview.rs  print_presets.rs  printers.rs  service_catalog.rs  telemetry.rs  uploads.rs
print-api/src/middleware/: auth.rs
print-api/src/models/: agent.rs  analytics.rs  bridge.rs  consumable.rs  design_template.rs  document_template.rs  icc_profile.rs  job.rs  job_template.rs  mod.rs  print_preset.rs  printer.rs  service_catalog.rs  telemetry.rs
print-api/src/mqtt/: mod.rs  publisher.rs  subscriber.rs
rust-agent/: Cargo.toml  build.rs  config.example.toml  svf-print-agent.service
rust-agent/proto/: print.proto
rust-agent/src/: config.rs  cups.rs  icc.rs  main.rs  mqtt.rs  offline.rs  pipeline.rs  telemetry.rs
rust-api/: Cargo.toml
rust-api/src/: config.rs  db.rs  error.rs  main.rs
rust-api/src/handlers/: access.rs  bulk.rs  categories.rs  competitor_prices.rs  config.rs  dashboard.rs  enrichment.rs  entities.rs  export.rs  graph.rs  health.rs  metrics.rs  mod.rs  relations.rs  search.rs  sources.rs
rust-api/src/middleware/: auth.rs  rate_limit.rs  rbac.rs
rust-api/src/models/: access.rs  category.rs  competitor.rs  enrichment.rs  entity.rs  graph.rs  metric.rs  mod.rs  pagination.rs  relation.rs  search.rs  source.rs
rust-api/src/services/: chrome.rs  embedding.rs  enrichment_worker.rs  markdown_importer.rs  mod.rs  scraper.rs
svf-agent-core/: Cargo.toml  build.rs
svf-agent-core/proto/: infra.proto
svf-agent-core/src/: agent.rs  circuit_breaker.rs  config.rs  error.rs  health.rs  heartbeat.rs  lib.rs  logging.rs  mqtt.rs  offline.rs  runner.rs  updater.rs
svf-gateway/: Cargo.toml  build.rs
svf-gateway/deploy/: nginx-grpc.conf  svf-gateway.service
svf-gateway/src/: config.rs  main.rs  proto.rs  request_context.rs
svf-gateway/src/auth/: interceptor.rs  layer.rs  mod.rs  rate_limit.rs
svf-gateway/src/bridge/: express.rs  mod.rs
svf-gateway/src/services/: app_config.rs  auth.rs  chat.rs  media.rs  mod.rs  orders.rs
(+2767 files in other folders)
