[package]
name = "photo-retouch-tool"
version = "0.1.0"
edition = "2024"
description = "Rust photo document crop and crop-line detection tool"

[dependencies]
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "bmp", "tiff"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
