[package]
name = "svf-print-agent"
version = "0.1.0"
edition = "2024"
description = "SvoePhoto Print Agent — cross-platform printing (Windows Spooler + CUPS) with MQTT orchestration"

[dependencies]
# Shared agent core (MQTT, config, offline, heartbeat, updater)
svf-agent-core = { path = "../svf-agent-core" }

# Async runtime
tokio = { version = "1", features = ["full", "signal"] }

# MQTT client
rumqttc = "0.24"

# Protobuf (print-specific messages)
prost = "0.13"

# Image processing (cross-platform)
image = "0.25"

# EXIF metadata (orientation correction)
kamadak-exif = "0.5"

# ICC color management (cross-platform, lcms2-sys)
lcms2 = "6"

# HTTP client (download print files from S3)
reqwest = { version = "0.12", features = ["rustls-tls", "cookies"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Types
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Temp files
tempfile = "3"

# Base64 (preview encoding)
base64 = "0.22"

# RSA encryption (Canon Remote UI login)
rsa = "0.9"
rand = "0.8"

# Regex (Canon HTML parsing)
regex = "1"

# Windows printing (Spooler API, GDI)
[target.'cfg(windows)'.dependencies]
windows-service = "0.7"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Printing",
    "Win32_Graphics_Printing_PrintTicket",
    "Win32_Graphics_Gdi",
    "Win32_System_Services",
    "Win32_Security",
    "Win32_Storage_Xps",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
quick-xml = { version = "0.37", features = ["serialize"] }

[build-dependencies]
prost-build = "0.13"

[profile.release]
lto = true
codegen-units = 1
strip = true
