[package]
name = "svf-gateway"
version = "0.1.0"
edition = "2024"
description = "SvoePhoto gRPC Gateway — unified API gateway for mobile clients"

[dependencies]
# gRPC
tonic = { version = "0.12", features = ["gzip"] }
tonic-health = "0.12"
tonic-reflection = "0.12"
tonic-web = "0.12"
prost = "0.13"
prost-types = "0.13"

# Runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tower = { version = "0.5" }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Auth
jsonwebtoken = "9"
sha2 = "0.10"
hex = "0.4"

# Data
redis = { version = "0.27", features = ["aio", "tokio-comp"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
aws-sdk-s3 = "1"
aws-config = "1"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Config
dotenvy = "0.15"

# Error
thiserror = "2"

# Utils
uuid = { version = "1", features = ["v4"] }

[build-dependencies]
tonic-build = "0.12"

[profile.release]
lto = true
codegen-units = 1
strip = true
